# src/features/movie/movies.controller.js
@@ -3,6 +3,7 @@ const Service = require('./movies.service');
 class Controller extends Service {
 
     async movieDetails(req, res) {
+        /* #swagger.tags = ['Movies'] #swagger.description = 'Get details from a movie' */
         try {
             const response = await super.movieDetails(req.params.movieId, req.params.language);
             res.send(response)
@@ -12,6 +13,7 @@ class Controller extends Service {
     }
 
     async popular(req, res) {
+        /* #swagger.tags = ['Movies'] #swagger.description = 'Get popular movies per region' */
         try {
             const response = await super.popular(req.params.language, req.params.region);
             res.send(response)
@@ -21,6 +23,7 @@ class Controller extends Service {
     }
 
     async trend(req, res) {
+        /* #swagger.tags = ['Movies'] #swagger.description = 'Get trending movies per week or day' */
         try {
             const response = await super.trend(req.params.timeWindow, req.params.language);
             res.send(response)
@@ -30,6 +33,7 @@ class Controller extends Service {
     }
 
     async now(req, res) {
+        /* #swagger.tags = ['Movies'] #swagger.description = 'Get movies in theaters per region' */
         try {
             const response = await super.now(req.params.language, req.params.region);
             res.send(response)
@@ -39,6 +43,7 @@ class Controller extends Service {
     }
 
     async next(req, res) {
+        /* #swagger.tags = ['Movies'] #swagger.description = 'Get next movies in theaters per region' */
         try {
             const response = await super.next(req.params.language, req.params.region);
             res.send(response)
